--- a/SimplyQuote/sitewide/templates/registration/login.html
+++ b/SimplyQuote/sitewide/templates/registration/login.html
@@ -73,29 +73,7 @@
       </a>
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/quotes/account_info/">Account</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/quotes/view_all_quotes/">All Quotes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/quotes/generate_quote/">+Create Quote</a>
-        </li>
-        <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
-        {% if user.is_authenticated %}
-       <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-       </li>
-       <li class="nav-item">
-       <a class="nav-link" href= "#">{{user.username}}</a>
-      </li>
-        {% else %}
-       <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-       </li>
-       {% endif %}
-        <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+        
       </ul>
       <!-- Left links -->
     </div>
@@ -124,15 +102,7 @@
         class="dropdown-menu dropdown-menu-end"
         aria-labelledby="navbarDropdownMenuLink"
       >
-        <li>
-          <a class="dropdown-item" href="#">My profile</a>
-        </li>
-        <li>
-          <a class="dropdown-item" href="#">Settings</a>
-        </li>
-        <li>
-          <a class="dropdown-item" href="#">Logout</a>
-        </li>
+        
       </ul>
     </div>
     <!-- Right elements -->
@@ -145,8 +115,37 @@
 
     <div>
     <!-- CONTENT FOR TEMPLATES THAT EXTEND THIS BASE GOES HERE -->
-            {% block content %}
-            {% endblock %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+    </head>
+    <body>
+        {%  load crispy_forms_tags %}
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-5 offset-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2>Enter your credentials</h2>
+                            <hr>
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                {{form | crispy}}
+                                
+                                <a href="{% url 'registro' %}" class="btn btn-success float-right">Registro</a>
+                                <input type="submit" value="Login" class="btn btn-success float-right">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+    </html>
     </div>
 
 <div style="height:2vh">
@@ -165,3 +164,31 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
